--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,10 +10,20 @@
   }
 }
 
-.bgImage {
-  background-image: url('../image/png/rectangle21.jpg');
-}
-
-.headerImage {
-  background-image: url('../image/png/image-bg.png');
+@layer components {
+  .Footer-btnCenter {
+    position: absolute;
+    top: 12.3125rem;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .SearchInput {
+    background-color: white;
+    outline: none;
+    border: 0;
+  }
 }
